2012-01-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/web/web_test.cpp: example of custom http messages

	* src/libYARP_OS/src/HttpCarrier.cpp: better support custom
	http messages [thanks Juan G Victores]

	* src/libYARP_OS/src/StreamConnectionReader.cpp: fix double
	reply problem on forcibly-closed stream

2012-01-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/yarp_http.dox: Give some basic documentation for the
	http protocol.

	* src/libYARP_OS/src/PortCore.cpp: chrome browser plays 
	interesting games with http connections; don't display connections 
	until they commit to a carrier.

2012-01-10  Marco Randazzo <marco.randazzo@iit.it>
    * src/libYARP_dev/src/RemoteControlBoard.cpp
    
    fixed bug in method setTorquePids(): the method was setting the position pid, not the torque pid
    
2011-12-13 Lorenzo Natale <lorenzo.natale@iit.it>
        * Tagging 2.3.14 

2011-12-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: add ImageRgb.tostring method to python
	wrappers, as fallback method for reading YARP images in
	python opencv.

2011-12-07 Lorenzo Natale <lorenzo.natale@iit.it>

	* src/libYARP_OS/include/yarp/os/impl/RunProcManager.h
	* src/libYARP_OS/include/yarp/os/Run.h
	* src/libYARP_OS/src/Companion.cpp
	* src/libYARP_OS/src/RFModule.cpp
	* src/libYARP_OS/src/Run.cpp
	* src/libYARP_OS/src/RunProcManager.cpp
	* src/libYARP_OS/src/RunReadWrite.cpp
	
	Redirection to stdio uses plain strings to improve formatting. 
    Remove redundant check if WIN32 || WIN64 since WIN64 => WIN32	
	
2011-12-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreOutputUnit.cpp: when closing
	a port, better interrupt any RPC send-reply currently in operation.
	[thanks Carlo Ciliberto]

2011-12-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: if port is interrupted between
	a read-with-reply and the corresponding reply, go ahead and